--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-spring.jpa.database-platform=com.springboot.sqlite.SQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url = jdbc:sqlite:desafiodb
-spring.datasource.driver-class-name = org.sqlite.JDBC
-spring.datasource.username = admin
-spring.datasource.password = admin
+spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=create-drop
