--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+server.port=8080
+spring.application.name=desafio
+eureka.client.enabled=true
+spring.jpa.database-platform=br.com.desafio.config.SQLDialectConfig
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:sqlite:base.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.initialization-mode=always
+spring.datasource.username=admin
+spring.datasource.password=admin
